crates/biome_html_parser/tests/html_specs/ok/svelte/snippet_recursive.svelte
{#snippet countdown(n)}
  {#if n > 0}
    <p>{n}</p>
  {:else}
    <p>Liftoff!</p>
  {/if}
{/snippet}
