crates/biome_html_parser/tests/html_specs/error/svelte/await_invalid_shorthand_with_clause.svelte
{#await promise then value}
  <p>{value}</p>
{:then anotherValue}
  <p>{anotherValue}</p>
{/await}
